[gd_scene load_steps=2 format=3 uid="uid://dofm2ti7kntrq"]

[ext_resource type="Script" path="res://scripts/MainMenuButton.gd" id="1_ltf6b"]

[node name="MainMenuButton" type="TextureButton"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ltf6b")

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
